# mudra-lsl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: AUTONOMOUS_AGENT.md  mudraka-wishlist.md
docs/adr/: 0001-lsl-binding-mne-lsl.md  0002-source-id-device-serial.md  0003-timestamps-push-chunk-autostamp.md  0004-value-representation-uv-float32.md  0005-architecture-stream-publisher.md  0006-license-apache-2.0.md  0007-packaging-uv-hatchling.md  README.md
examples/: README.md  print_stream.py  read_and_export_mne.py
mudra_lsl/: __init__.py  app.py  ble.py  cli.py  constants.py
mudra_lsl/publishers/: __init__.py  base.py  emg.py
tests/: conftest.py  test_app.py  test_ble_helpers.py  test_cli.py  test_emg_publisher.py  test_frame_roundtrip.py  test_integration_device.py
tests/fixtures/: generate.py  synth.py  synthetic_emg_session.jsonl
