[project]
name = "mudra-lsl"
version = "0.1.0"
description = "Stream raw sEMG from a Mudra Link wristband to Lab Streaming Layer (LSL)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "ttktjmt", email = "tatsuki@codecflow.ai" }]
keywords = [
    "lsl",
    "labstreaminglayer",
    "emg",
    "semg",
    "mudra",
    "mudra-link",
    "wearable",
    "bci",
    "bleak",
    "ble",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mudraka>=0.3,<0.4",
    "mne-lsl>=1.6,<2",
    "bleak>=0.22",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Extra deps for the runnable examples (e.g. exporting an LSL recording to MNE).
examples = ["mne>=1.6"]

[project.scripts]
mudra-lsl = "mudra_lsl.cli:main"

[project.urls]
Homepage = "https://github.com/ttktjmt/mudra-lsl"
Repository = "https://github.com/ttktjmt/mudra-lsl"
Issues = "https://github.com/ttktjmt/mudra-lsl/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mudra_lsl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "device: integration tests that require a real Mudra Link device over BLE (skipped in CI).",
]
